--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,10 @@ authors = ["contributors"]
 version = "1.0.0-DEV"
 
 [deps]
-IndirectArrays = "9b13fd28-a010-5f03-acff-a1bbcff69959"
+PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
 
 [compat]
-IndirectArrays = "1.0.0"
+PooledArrays = "1.4.3"
 julia = "1.6.7"
 
 [extras]
